Политики перемещены в elwiki.data, из: org.apache.wiki.auth.authorize; org.apache.wiki.auth.permissions. Модель, representations.aird - обновлен до версии "14.6.0.202110251100".